--- a/student/index.html
+++ b/student/index.html
@@ -15,15 +15,13 @@
 <body>
     <table class="mainMenu">
         <tr>
-            <td><img id = mainPicture src="images/Logo.bmp" height="75" >
-            </td>
-            <td><button class = "menu-button" id = carsButton>Cars</button>
-            </td>
-            <td><button class = "menu-button" id = "manufacturersButton">Manufacturers</button>
-            </td>
+            <td><img id = mainPicture src="images/Logo.bmp"></td>
+            <td><button class = "menu-button" id = carsButton>Cars</button></td>
+            <td><button class = "menu-button" id = "manufacturersButton">Manufacturers</button></td>
         </tr>
     </table>
     <br />
     <div id = "content"></div>
+    <div id = "types"></div>
 </body>
 </html>
